networking/network-policy-allow-nginx2-to-nginx3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx2-to-nginx3-egress
spec:
  podSelector:
    matchLabels:
      run: nginx2
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:
        matchLabels:
          run: nginx3
    # ports:
    # - protocol: TCP
    #   port: 80
  policyTypes:
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx3-from-nginx2-ingress
spec:
  podSelector:
    matchLabels:
      run: nginx3
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:
        matchLabels:
          run: nginx2
    # ports:
    # - protocol: TCP
    #   port: 80
  policyTypes:
  - Ingress
